--- a/webclient/src/index.css
+++ b/webclient/src/index.css
@@ -1,5 +1,15 @@
-body {
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+html, body {
   margin: 0;
   padding: 0;
+  background: #f2f2f2;
+}
+
+body {
   font-family: sans-serif;
 }
